# ServiceManager

./: build.sh
ServiceManager-main/: CMakeLists.txt  ReadMe.md  build.sh
ServiceManager-main/src/: Maanger.ino
ServiceManager-main/src/Interface/: main.cpp
ServiceManager-main/src/Server/: ProcessRunner.cpp  ProcessRunner.hpp  command.hpp  main.cpp
ServiceManager-main/src/website/: main.cpp  monitor.html
src/: Maanger.ino
src/Interface/: main.cpp
src/Server/: ProcessRunner.cpp  ProcessRunner.hpp  command.hpp  main.cpp  server
src/website/: HostServer  main.cpp  monitor.html
